makes adjustments to stop attachment overflow

--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -29,6 +29,7 @@
 }
 
 .MessagingBubble--Message .MessagingAttachment--ParentContainer {
+  max-width: 100%;
   margin-right: 0;
 }
 
@@ -53,6 +54,7 @@
   justify-content: center;
   color: @neutral_dark_gray;
   max-width: 18.625rem; // 298px
+  .text--truncate();
 }
 
 // TODO: remove if unused
